Change log updating to FVCOM5
-----------------------------

Update BIO module
BIO_source directory, mod_bio_3d.F

Tidy up equals signs
mod_fluid_mod.F

Add warnings for namelist -- compile mismatch
namelist.F

Add significant waveheight correction from Karsten Lettmann
swanser.F

Ice freshwater to compiler option
ice_mechred.F, ice_therm_vertical.F, mod_ice.F

Remove cray compiler directives
ice_albedo.F, ice_init.F, ice_ltd.F, ice_ltd_linear.F, ice_mechred.F, ice_therm_itd.F, ice_therm_vertical.F, swmod2.F

Ice mod bounds fix
mod_ice.F